--- a/specs/wtf-0001.md
+++ b/specs/wtf-0001.md
@@ -18,20 +18,20 @@ Interface is a list of supported get methods, internal/external messages AND exp
 
 `Interface name` is some globaly unique name in a reverse domain notation, for example: `org.ton.wallets.v3.r2`. 
 
-`Interface ID` is a 'hashed' `Interface name` with simple CRC32.
+`Interface ID` is calculated by getting first 16 bytes of a SHA256 of `Interface name`.
 
 For convenience  provide [online tool](https://tonwhales.com/tools/introspection-id) for value calculation.
 
 ### Introspection Interfcace
 
-Introspection interface is named `org.ton.introspection.v0` and it's ID id `1403833071`. 
+Introspection interface is named `org.ton.introspection.v0` and it's ID id `123515602279859691144772641439386770278`. 
 
 In order to implement it contract should implement `supported_interfaces` function.
 
-NOTE: `1403833071` ALWAYS have to be the first value in this list.
+NOTE: `123515602279859691144772641439386770278` ALWAYS have to be the first value in this list.
 
 ```func
 _ supported_interfaces() method_id {
-    return (1403833071);
+    return (123515602279859691144772641439386770278);
 }
 ```
