--- a/specs/wtf-0001.md
+++ b/specs/wtf-0001.md
@@ -20,7 +20,7 @@ Interface is a list of supported get methods, internal/external messages AND exp
 
 `Interface ID` is calculated by getting first 16 bytes of a SHA256 of `Interface name`.
 
-For convenience  provide [online tool](https://tonwhales.com/tools/introspection-id) for value calculation.
+For convenience  provide [online tool](https://tondev.org/tools/interface-id) for value calculation.
 
 ### Introspection Interfcace
 
