--- a/specs/wtf-0002.md
+++ b/specs/wtf-0002.md
@@ -14,13 +14,18 @@ From whitepaper:
 3.1.4. Standard cell representation. 
 When a cell needs to be transferred by a network protocol or stored in a disk file, it must be serialized. 
 The standard representation CellRepr(c) = CellRepr∞(c) of a cell c as an octet (byte) sequence is constructed as follows:
-1. Two descriptor bytes d1 and d2 are serialized first. Byte d1 equals r+8s+32l, where 0 ≤ r ≤ 4 is the quantity of cell references contained in the cell, 0 ≤ l ≤ 3 is the level of the cell, and 0 ≤ s ≤ 1 is 1 for exotic cells and 0 for ordinary cells. Byte d2 equals ⌊b/8⌋+⌈b/8⌉, where 0 ≤ b ≤ 1023 is the quantity of data bits in c.
-2. Then the data bits are serialized as ⌈b/8⌉ 8-bit octets (bytes). If b is not a multiple of eight, a binary 1 and up to six binary 0s are appended to the data bits. After that, the data is split into ⌈b/8⌉ eight-bit groups, and each group is interpreted as an unsigned big-endian integer 0 . . . 255 and stored into an octet.
-3. Finally, each of the r cell references is represented by 32 bytes contain- ing the 256-bit representation hash Hash(ci), explained below in 3.1.5, of the cell ci referred to.
+1. Two descriptor bytes d1 and d2 are serialized first. Byte d1 equals r+8s+32l, where 0 ≤ r ≤ 4 is the quantity of cell references
+contained in the cell, 0 ≤ l ≤ 3 is the level of the cell, and 0 ≤ s ≤ 1 is 1 for exotic cells and 0 for ordinary cells. Byte d2 equals 
+⌊b/8⌋+⌈b/8⌉, where 0 ≤ b ≤ 1023 is the quantity of data bits in c.
+2. Then the data bits are serialized as ⌈b/8⌉ 8-bit octets (bytes). If b is not a multiple of eight, a binary 1 and up to six 
+binary 0s are appended to the data bits. After that, the data is split into ⌈b/8⌉ eight-bit groups, and each group is interpreted as 
+an unsigned big-endian integer 0 . . . 255 and stored into an octet.
+3. Finally, each of the r cell references is represented by 32 bytes contain- ing the 256-bit representation hash Hash(ci), explained
+below in 3.1.5, of the cell ci referred to.
 In this way, 2 + ⌈b/8⌉ + 32r bytes of CellRepr(c) are obtained.
 ```
 
-From documentation it is obvious that if we want to sign cell with a single reference it will have a form if `<prefix><referehce_hash>`. Now we need to construct prefix the way it became invalid. It is obvious that values `5 ≤ r ≤ 7`, `2 ≤ s ≤ 3` and `4 ≤ l ≤ 7`. We will pick maximum values and this would be `0xff` bytes. While this already makes prefix impossible we will strength it even further just in case if cell representation specification will be expanded. Second byte doesn't have invalid values so let's just pick the same `0xff` byte. This value would represent `1023` bits, to make it invalid we will simply write to buffer anything that is less than 127 bytes long. This standart defines this as binary representation of string `ton-safe-sign-magic`.
+From documentation it is obvious that if we want to sign cell with a single reference it will have a form if `<prefix><referehce_hash>`. Now we need to construct prefix the way representation became invalid. It is obvious that values `5 ≤ r ≤ 7`, `2 ≤ s ≤ 3` and `4 ≤ l ≤ 7` are all invalid. We will pick maximum values and this would be `0xff` byte. While this already makes representation invalid we will strength it even further just in case if cell representation specification will be expanded. Second byte doesn't have invalid values so let's just pick the same `0xff` byte. This value would represent `1023` bits, to make it invalid we will simply write to buffer anything that is less than 127 bytes long. This standart defines this as binary representation of string `ton-safe-sign-magic`.
 
 ## Spec
 
