--- a/specs/wtf-0001.md
+++ b/specs/wtf-0001.md
@@ -1,5 +1,7 @@
 # Contract introspection (rev 3)
 
+Authors: Steve Korshakov (steve@korshakov.com), Danil Volkov (danila@whalescorp.com), Narek Abovyan (xeroxaltox@gmail.com).
+
 This is highly valuable specification that is needed for almost any service in the ecosystem such as: indexers, wallets and marketplaces. This specification aims to helps to declare what contract supports while being very flexible and help individual developers from moving forward.
 
 ## Spec
