--- a/specs/wtf-0002.md
+++ b/specs/wtf-0002.md
@@ -1,5 +1,7 @@
 # Safe Signing
 
+Author: Steve Korshakov (steve@korshakov.com)
+
 To prove ownership of an address for off-chain services, it is required to provide signing of arbitrary data from wallets. Unfortunately, since key is the same we have to construct 
 a safe way to sign to avoid malicilous signing of a transaction. This specifications does exactly that.
 
