wip: working on HD keys

--- a/opinions/dtfo-0001.md
+++ b/opinions/dtfo-0001.md
@@ -6,7 +6,7 @@ Jettons spec aimed to be the first token contract and establish how tokens must 
 
 Jettons goes against what was stated in whitepapers and solves scalability issues in a non-natural way for what was expected to be solved by the network, not contract developers.
 
-Historically Jettons are descendants of an NFT contract that got its architecture from a test task for a just hired employee to dive deeper to contract development and **never intended to be a standard**. For some reason, Ton Foundation and GetGems hired this engineer and continued to work on this contract. I believe that the only explanation is that it looks mathematically sound and an exciting task to solve, not something that solves any problem.
+Historically Jettons are descendants of an NFT contract that got its architecture from a wild idea that two people (me and N. Abovyan) had during one evening discussing what to do in TON at the bar: what if every NFT could be a separate contract. That was one of this ideas that smart people use as entertainment. In next days N. Abovyan published it's first contract to a testnet and Github. It was a joke contract and **never intended to be a standard**. For some reason, Ton Foundation and GetGems hired this engineer and continued to work on this contract. I believe that the only explanation is that it looks mathematically sound and an exciting task to solve, not something that solves any problem.
 
 NFT standards have huge flaws, and one of them - **they are not meant to be generated randomly**. This is the most crucial feature in NFT, yet the standard explicitly disallows it. Also, deploying a new collection takes about 2k$ in gas, and there is no way to reduce this cost.
 
