--- a/specs/wtf-0003.md
+++ b/specs/wtf-0003.md
@@ -1,7 +1,11 @@
-# HD Keys (draft)
+# HD Keys Seed
 
 Authors: Steve Korshakov (steve@korshakov.com)
 
 Hierarchical Deterministic Keys are a useful feature of Bitcoin that allows you to backup a single seed phrase and have an access to virtually infinity number of keys.
 
-Unfortunatelly, HD keys are not working as is with Curve25519. We are proposing modification to original BIP-39 to support DH keys.
+There are muliple HD keys for multiple algorithms, this proposal defines how to derive root seed for any possible algorithm and withoud sacrificing root wallet key.
+
+## Spec
+
+To derive 64 byte seed from TON mnemonics just use seed text `TON HD Keys seed` instead of default one.
