--- a/specs/wtf-0002.md
+++ b/specs/wtf-0002.md
@@ -39,3 +39,7 @@ let hash = cell.hash(); // Hash of cell
 let data = sha256(Buffer.concat([Buffer.from([0xff, 0xff]), Buffer.from('ton-safe-sign-magic'), hash])); // Data to hash
 let signature = sign(data, publicKey); // Resulting signature
 ```
+
+## Customization
+
+For specific needs it is possible to change `ton-safe-sign-magic` for separating different signature usage, for example for signing "child" keys that could be used as proof of ownership off-chain or on-chain.
