--- a/specs/wtf-0002.md
+++ b/specs/wtf-0002.md
@@ -42,4 +42,4 @@ let signature = sign(data, publicKey); // Resulting signature
 
 ## Customization
 
-For specific needs it is possible to change `ton-safe-sign-magic` for separating different signature usage, for example for signing "child" keys that could be used as proof of ownership off-chain or on-chain.
+For specific needs it is possible to change `ton-safe-sign-magic` for separating different signature usage, for example for signing "child" keys that could be used as proof of ownership off-chain or on-chain, but this string must be non-zero and not too big to form a 127 bytes string for signing.
